# farmhash

./: CMakeLists.txt
dev/: INSTRUCTIONS  fix-copyright.sh
src/: farmhash.cc
